# spglib

./: .buildinfo  .clang-format  .clang-tidy  .cmake-format  .codecov.yaml  .gitignore  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  404.html  CITATION.cff  CMakeLists.txt  CMakePresets-CI.json  CMakePresets.json  COPYING  ChangeLog  ChangeLog.md  ChangeLog.md.j2  ChangeLog.yaml  Contributing.md  Contribution.md  Makefile.am  README.md  README.rst  admin.md  api.html  api.txt  changes_at_v2.html  configure.ac  dataset.html  definition.html  develop.html  genindex.html  index.html  install.html  interface.html  magnetic_dataset.html  magnetic_spacegroup.html  magnetic_symmetry_flags.html  (+12 more)
cpp/: CMakeLists.txt  spglib.cpp  spglib.hpp  version.cpp.in
example/: CMakeLists.txt  Makefile_f08  README  README.md  c_api  example.c  example.f90  example_f08.f90  fortran_api  frequency.dat.bz2  main.fmf  python_api  spglib_f08.f90  test.sh  tetrahedron.c
example/c_api/: CMakeLists.txt  README.md  example.c  example_full.c  main.fmf
example/fortran_api/: CMakeLists.txt  README.md  example_full.f90  main.fmf
example/python_api/: README.md  atoms.py  example.py  example_full.py  main.fmf
fortran/: CMakeLists.txt  Makefile  README.md  example_f08.f90  spglib_f08.F90  spglib_f08.f90  spglib_f08.pc.cmake  spglib_f08.pc.in  spglib_version.f90.in  try_compile.f90
fortran/example/: README.md  example_f08.f90
python/: .clang-tidy  CMakeLists.txt  MANIFEST.in  README.rst  _spglib.c  _version.py.in  build-wheels.sh  get_nanoversion.sh  pre-build-script.sh  pyproject.toml  setup.py
python/ase/: _spglib.c  setup.py
python/ase/conda/: .binstar.yml  build.sh  meta.yaml
python/ase/examples/: example.py  example_atoms.py
python/ase/pyspglib/: spglib.py
python/ase/test/: test_ir_triplets.py  test_ir_triplets_at_q.py
python/conda/: .binstar.yml  anaconda_deploy.sh  build.sh  meta.yaml  run_test.sh  update_versions.sh
python/examples/: atoms.py  example.py
python/spglib/: __init__.py  spglib.py
python/spglib/_compat/: typing.py  warnings.py
python/test/: POSCAR_Si_prim  conftest.py  test_benchmark.py  test_change_of_basis.py  test_collinear_spin.py  test_hall_number_from_symmetry.py  test_layergroup.py  test_magnetic_dataset.py  test_niggli_delaunay.py  test_pure_trans.py  test_reciprocal_mesh.py  test_rhomb_H_and_R.py  test_site_tensors.py  test_spacegrouop_type_from_symmetry.py  test_spglib.py  test_stabilized_reciprocal_mesh.py  vasp.py
python/test/oldtest/: test_stabilized_reciprocal_mesh.py
rust/: Cargo.toml
rust/spglib-sys/: .gitignore  Cargo.toml  build.rs  wrapper.h
rust/src/: cell.rs  dataset.rs  internal.rs  lib.rs  spacegroup.rs
src/: CMakeLists.txt  Makefile.am  arithmetic.c  arithmetic.h  base.h  cell.c  cell.h  debug.c  debug.h  delaunay.c  delaunay.h  determination.c  determination.h  hall_symbol.c  hall_symbol.h  kgrid.c  kgrid.h  kpoint.c  kpoint.h  lattice.c  lattice.h  magnetic_spacegroup.c  magnetic_spacegroup.h  mathfunc.c  mathfunc.h  msg_database.c  msg_database.h  niggli.c  niggli.h  overlap.c  overlap.h  permutation.c  permutation.h  pointgroup.c  pointgroup.h  primitive.c  primitive.h  refinement.c  refinement.h  site_symmetry.c  (+19 more)
test/: CMakeLists.txt  CMakePresets-Release.json  CMakePresets.json  README.md  c_fixtures.cpp  c_fixtures.hpp  ctest.fmf  ctest.sh  getspg.c  poscar.rb  poscar2findsym.rb  pytest.fmf  symPoscar.rb  test_dataset_access.cpp  test_delaunay.cpp  test_error.cpp  test_find_primitive_cell.cpp  test_kpoints.cpp  test_magnetic_symmetry.cpp  test_refine_cell.cpp  test_spacegroup_type_search.cpp  test_standardization.cpp  test_symmetry.cpp  test_symmetry_search.cpp  utils.c  utils.h
test/data/: test-all.zsh  test-cubic.zsh  test-hexa.zsh  test-monocli.zsh  test-ortho.zsh  test-tetra.zsh  test-tricli.zsh  test-trigo.zsh
test/data/others/: test-others.zsh
test/data/virtual_structure/: spg_reference.txt
test/example/: CMakeLists.txt
test/example/c_api/: CMakeLists.txt  example.c  example_full.c
test/example/fortran_api/: CMakeLists.txt  README.md  example.F90
test/example/python_api/: example.py  example_full.py
test/fortran/: CMakeLists.txt  c_interface_module.F90  test_dummy.F90  test_fortran_spg_get_symmetry.F90  test_fortran_spg_get_symmetry.f90  test_fortran_spg_refine_cell.F90  test_fortran_spg_refine_cell.f90  test_spg_get_symmetry.f90  utils.f90
test/functional/: CMakeLists.txt
test/functional/c/: CMakeLists.txt  dataset_access.cpp  error.cpp  magnetic_symmetry.cpp  standardization.cpp  symmetry.cpp  symmetry_search.cpp  test_dataset_access.cpp  test_delaunay.cpp  test_error.cpp  test_find_primitive_cell.cpp  test_kpoints.cpp  test_magnetic_dataset.cpp  test_magnetic_symmetry.cpp  test_niggli.cpp  test_refine_cell.cpp  test_spacegroup_type_search.cpp  test_standardization.cpp  test_symmetry.cpp  test_symmetry_search.cpp
test/functional/fortran/: CMakeLists.txt  c_interface_module.F90  test_fortran_spg_get_dataset.F90  test_fortran_spg_get_magnetic_dataset.F90  test_fortran_spg_get_magnetic_spacegroup_type.F90  test_fortran_spg_get_spacegroup_type.F90  test_fortran_spg_get_symmetry.F90  test_fortran_spg_get_symmetry_with_site_tensors.F90  test_fortran_spg_refine_cell.F90  test_fortran_version.F90  utils.F90
test/functional/python/: CMakeLists.txt  conftest.py  test_benchmark.py  test_cell.py  test_change_of_basis.py  test_collinear_spin.py  test_hall_number_from_symmetry.py  test_layergroup.py  test_magnetic_dataset.py  test_niggli_delaunay.py  test_pure_trans.py  test_reciprocal_mesh.py  test_rhomb_H_and_R.py  test_site_tensors.py  test_spacegrouop_type_from_symmetry.py  test_spglib.py  vasp.py
test/integration/: CMakeLists.txt
test/package/: CMakeLists.txt  main.c  main.fmf  test.sh
test/package/FetchContent/: CMakeLists.txt  main.fmf
test/package/find_package/: CMakeLists.txt  main.fmf
test/package/pkg-config/: CMakeLists.txt  (+1 more)
test/unit/: CMakeLists.txt  dataset_acess.cpp  test_delaunay.cpp  test_error.cpp  test_niggli.cpp  test_symmetry.cpp  test_version.cpp
(+940 files in other folders)
